--- a/custom_components/haptique_rs90/services.yaml
+++ b/custom_components/haptique_rs90/services.yaml
@@ -8,7 +8,7 @@ trigger_macro:
       name: RS90 Remote
       description: Select your Haptique RS90 remote (find it in Settings > Devices & Services > Haptique RS90)
       required: true
-      example: "6e99751e77b5a07de72d549143e2875a"
+      example: "6f99751e78b5a07de72d549143e2975c"
       selector:
         device:
           integration: haptique_rs90
@@ -28,7 +28,7 @@ trigger_device_command:
       name: RS90 Remote
       description: Select your Haptique RS90 remote (find it in Settings > Devices & Services > Haptique RS90)
       required: true
-      example: "6e99751e77b5a07de72d549143e2875a"
+      example: "6f99751e78b5a07de72d549143e2975c"
       selector:
         device:
           integration: haptique_rs90
@@ -41,7 +41,7 @@ trigger_device_command:
         text:
     command_name:
       name: Command name
-      description: The exact command name to send (use sensor 'Commands - {device}' to see available commands)
+      description: The exact command name to send (check the device commands sensor to see available commands)
       required: true
       example: "POWER"
       selector:
