--- a/custom_components/haptique_rs90/services.yaml
+++ b/custom_components/haptique_rs90/services.yaml
@@ -46,3 +46,16 @@ trigger_device_command:
       example: "POWER"
       selector:
         text:
+
+refresh_lists:
+  name: Refresh device and macro lists
+  description: Forces the integration to re-scan and subscribe to new devices or macros. Use this after adding devices/macros in the Haptique Config app if they don't appear automatically.
+  fields:
+    device_id:
+      name: RS90 Remote
+      description: Select your Haptique RS90 remote (find it in Settings > Devices & Services > Haptique RS90)
+      required: true
+      example: "6f99751e78b5a07de72d549143e2975c"
+      selector:
+        device:
+          integration: haptique_rs90
