Fix French documentation link in triage workflow
Updated French documentation link in issue triage workflow.

--- a/.github/workflows/triage_new_issues.yml
+++ b/.github/workflows/triage_new_issues.yml
@@ -25,7 +25,7 @@ jobs:
             **🇫🇷 Français:**
             Votre issue a été créée et sera examinée prochainement. Pour accélérer le traitement :
             - ✅ Vérifiez que vous avez fourni toutes les informations demandées
-            - 📋 Consultez la [documentation](https://github.com/${context.repo.owner}/${context.repo.repo}/blob/main/README.md)
+            - 📋 Consultez la [documentation](https://github.com/${context.repo.owner}/${context.repo.repo}/blob/main/README_FR.md)
             - 🔄 Si vous migrez depuis v1.2.x, consultez le [guide de migration](https://github.com/${context.repo.owner}/${context.repo.repo}/blob/main/MIGRATION_GUIDE_v1.5.0.md)
 
             **⏰ Important:** Si nous avons besoin d'informations supplémentaires et qu'il n'y a pas de réponse dans les 7 jours, cette issue sera automatiquement fermée.
