--- a/custom_components/haptique_rs90/manifest.json
+++ b/custom_components/haptique_rs90/manifest.json
@@ -7,7 +7,8 @@
   "documentation": "https://github.com/daangel27/haptique_rs90",
   "integration_type": "device",
   "iot_class": "local_push",
+  "issue_tracker": "https://github.com/daangel27/haptique_rs90/issues",
   "mqtt": ["Haptique/+/status"],
-  "requirements": [],
+  "requirements": ["aiomqtt>=2.0.0"],
   "version": "1.5.0"
 }
