--- a/.github/workflows/quick-check.yml
+++ b/.github/workflows/quick-check.yml
@@ -2,7 +2,7 @@ name: Quick Check
 
 on:
   push:
-    branches: [dev]
+    branches: [dev, main]  # ← Ajoutez main si pas déjà là
 
 jobs:
   quick-check:
